- Bugfix: The framework should now also handle the NimbusLookAndFeel (whose package was renamed, so much for backwards compatibility...) under Java 7 
- API: Added some additional interfaces to prevent constructors like "<A extends SimpleButtonDockAction & CommonDockable>", as these constructors are not working well together with the compiler.

[v1.1.1p4]
- Bugfix: DockElementRepresentative.shouldTransfersFocus is now respected by the DefaultFocusStrategy, meaning that clicking on an element like a tab now forwards the focus directly into a Dockable.
- API: Focus ownership is now transfered more aggressively: focus transfer can be delayed up to 200 milliseconds after the user clicked the mouse.
! API: FocusStrategy now receives a FocusStrategyRequest instead of several parameters.

[v1.1.1p4a]
- Bugfix: ScreenDockPerspective did not update the parent property of its children

[v1.1.1p5]
* DropDownIcon
 ! API: DropDownMiniButton.setDropDownIconColor removed, this color can now be configured throught the ColorManager and the key "action.dropdown.arrow"
 - API: The icon can now be replaced through the IconManager using the key DropDownIcon.ICON_KEY
 - API: The default icon resizes itself according to IconManager.MINIMUM_ICON_SIZE

* General 
 - Bugfix: UIProperties.put could throw a NullPointerException if no UIScheme was set 
 

[Todo]
- Import/Export Perspectives from file
- DockActions/Tabs: assign priority to elements; more important elements stay longer on screen if there is not enough space for all elements
- Tabs: replace icon of drop down action showing overflowing Dockables by icon that dynamically shows the size of the menu
- Drop StackDockStation over Dockable and merge them
- EclipseTheme: Drop Dockable over Dockable and allow to select which Dockable has which index in the new StackDockStation.
- SingleParentRemover: Implement bugfix as described in the file